--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "flipper",
+  "name": "flipper-js",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "index.d.ts",
+  "repository": "https://github.com/ThomasDupont/flipper-js",
+  "bin": {
+    "SEOchecker": "bin/flipper.js"
+  },
   "scripts": {
-    "build": "tsc && cd flipper-ui && npm run build",
-    "dev": "export FLIPPER_API_KEY=test-api-key && npm run build && node dist/testExpress/index.js",
-    "postinstall": "npm run build",
+    "build": "tsc",
+    "dev": "export FLIPPER_API_KEY=test-api-key && npm run build && node dist/src/testExpress/index.js",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["feature flipping", "flipper"],
+  "author": "Thomas Dupont",
+  "license": "MIT",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
@@ -23,9 +26,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.6",
     "@types/redis": "^4.0.11",
+    "@vitejs/plugin-react": "^4.3.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
@@ -35,7 +40,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "redis": "^4.6.14",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.2",
     "zod": "^3.23.8"
   }
 }
